fix(TDOPS-3299): design system modal z-index to use tokens convention

--- a/packages/design-system/src/components/Modal/Modal.module.scss
+++ b/packages/design-system/src/components/Modal/Modal.module.scss
@@ -1,8 +1,5 @@
 @use '~@talend/design-tokens/lib/tokens';
 
-$modal-backdrop-z-index: 100000;
-$modal-z-index: $modal-backdrop-z-index + 1;
-
 .modal-backdrop:before,
 .modal-container {
 	position: fixed;
@@ -13,8 +10,8 @@ $modal-z-index: $modal-backdrop-z-index + 1;
 }
 
 .modal-backdrop {
+	z-index: tokens.$coral-elevation-layer-standard-front;
 	&:before {
-		z-index: $modal-backdrop-z-index - 1;
 		content: '';
 		background-color: tokens.$coral-color-assistive-background;
 		opacity: tokens.$coral-opacity-l;
@@ -22,7 +19,6 @@ $modal-z-index: $modal-backdrop-z-index + 1;
 }
 
 .modal-container {
-	z-index: $modal-z-index;
 	display: flex;
 	justify-content: center;
 	align-items: center;
